--- a/bench/charts/ui.css
+++ b/bench/charts/ui.css
@@ -10,6 +10,13 @@
     font-size: 11px;
 }
 
+.axis path,
+.axis line {
+    fill: none;
+    stroke: #000;
+    shape-rendering: crispEdges;
+}
+
 rect {
     stroke: black;
     shape-rendering: crispEdges;
